fix unnecessary scrollbars in split window

--- a/app/assets/app/graph/directives/_graph_view.scss
+++ b/app/assets/app/graph/directives/_graph_view.scss
@@ -20,12 +20,4 @@
     marker path.svglink {
         fill: $graph_link_color !important;
     }
-    .loading_indicator {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 150px;
-        height: 150px;
-        margin: -100px 0px 0px -75px;
-    }
 }
