--- a/app/assets/stylesheets/_loading_indicator.scss
+++ b/app/assets/stylesheets/_loading_indicator.scss
@@ -1,4 +1,4 @@
-.route_loading_indicator {
+.loading_indicator {
     position: absolute;
     top: 50%;
     left: 50%;
